--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=	, initial-scale=1.0">
     <title>Food Restaurant</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    <h1>Hello all</h1>
+    <section id="hero">
+        <div class="hero-container">
+            <p>Savor the Flavors</p>
+            <h1>Experience Culinary Excellence Food Experience</h1>
+            <p class="hero-paragraph">
+                Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
+                Latin literature from 45 BC, making it over 2000 years old. Richard McClintock
+            </p>
+            <div class="btn-container">
+                <button class="btn">Shop The Hotest Food</button>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
