--- a/index.html
+++ b/index.html
@@ -17,10 +17,51 @@
                 Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
                 Latin literature from 45 BC, making it over 2000 years old. Richard McClintock
             </p>
-            <div class="btn-container">
+            <div>
                 <button class="btn">Shop The Hotest Food</button>
             </div>
         </div>
+    </section>
+    <section id="card-box">
+        <div class="card-group">
+            <div class="card-heading">
+                <p>Favorite Brands</p>
+                <h1>Your Favorite Brands Food Are Now On Sale</h1>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="assets/pizza.png" alt="">
+                    </div>
+                    <div>
+                        <span class="pizza">Pizza Burg</span>
+                    </div>
+                    <h1>Up To 50% Off</h1>
+                    <p class="pizza-paragraph">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="assets/biriyani.png" alt="">
+                    </div>
+                    <div>
+                        <span class="pizza">Kacchi Bhai</span>
+                    </div>
+                    <h1>Up To 50% Off</h1>
+                    <p class="pizza-paragraph">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="assets/burger.png" alt="">
+                    </div>
+                    <div>
+                        <span class="pizza">Burger King</span>
+                    </div>
+                    <h1>Up To 50% Off</h1>
+                    <p class="pizza-paragraph">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                </div>
+            </div>
+        </div>
+
     </section>
 </body>
 
