--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=	, initial-scale=1.0">
     <title>Food Restaurant</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 
 <body>
@@ -63,6 +65,31 @@
         </div>
 
     </section>
+    <section id="about">
+        <div class="about-left">
+            <img src="assets/foods.png" alt="">
+        </div>
+        <div class="about-right">
+            <div class="about-title">
+                <h1>We always make sure to provide you with good food</h1>
+            </div>
+            <div class="about-paragraph">
+                <p>Don’t miss a thing! Subscribe to our newsletter</p>
+            </div>
+            
+            <div class="follow">
+                <span>Follow Us On</span>
+            </div>
+            <div class="about-icons">
+                <i class='bx bxl-facebook-circle'></i>
+                <i class='bx bxl-instagram-alt' ></i>
+                <i class='bx bxl-youtube' ></i>
+                <i class='bx bxl-twitter' ></i>
+            </div>
+        </div>
+    </section>
+    
+   
 </body>
 
 </html>
