--- a/index.html
+++ b/index.html
@@ -88,6 +88,26 @@
             </div>
         </div>
     </section>
+    <section id="social">
+        <div>
+            <div class="social-title">
+                <h1>We always make sure to provide you with good food</h1>
+            </div>
+            <div class="social-paragraph">
+                <p>Don’t miss a thing! Subscribe to our newsletter</p>
+            </div>
+            
+            <div class="follow">
+                <span>Follow Us On</span>
+            </div>
+            <div class="about-icons">
+                <i class='bx bxl-facebook-circle'></i>
+                <i class='bx bxl-instagram-alt' ></i>
+                <i class='bx bxl-youtube' ></i>
+                <i class='bx bxl-twitter' ></i>
+            </div>
+        </div>
+    </section>
     
    
 </body>
