--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <p class="pizza-paragraph">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
                 </div>
             </div>
+            <div class="btn" style="margin-top: 30px;"><span>Watch All Sells</span></div>
         </div>
 
     </section>
